gcc/testsuite/g++.dg/template/crash55.C
@@ -1,0 +1,6 @@
+//PR c++/27668
+
+template<typename class T, T = T()> // { dg-error "nested-name-specifier|two or more|valid type" }
+struct A {};                        // { dg-error "definition"
+
+template<int> void foo(A<int>);     // { dg-error "mismatch|constant" }
