gcc/testsuite/g++.dg/template/nontype16.C
@@ -1,0 +1,9 @@
+//PR c++/27962
+
+template<int> struct A
+{
+    template<typename> void foo();
+};
+
+template<> template<struct T> void A<0>::foo() {} // { dg-error "not a valid type" }
+ 
